# PowerGrid

./: .gitignore  ACKNOWLEDGEMENTS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Gemfile  LICENSE  PGWorkspace.code-workspace  README.md  Vagrantfile  _config.yml  index.html
.devcontainer/: devcontainer.json
PowerGrid/: DWIRecon.cpp  DWIRecon.h  DWIRecon.hpp  Gdft.cpp  Gdft.h  Gdft.hpp  GdftR2.cpp  GdftR2.h  GdftRecon.cpp  GdftRecon.h  GdftRecon.hpp  Gfft.cpp  Gfft.h  Gfft.hpp  Gnufft.cpp  Gnufft.h  Gnufft.hpp  GnufftRecon.cpp  GnufftRecon.h  GnufftRecon.hpp  PGIncludes.h  PowerGrid.h  PowerGridDWI3DDFT.cpp  PowerGridGdft.cpp  PowerGridGnufft.cpp  PowerGridIsmrmrd.cpp  PowerGridPcSense.cpp  PowerGridPcSenseTimeSeg.cpp  PowerGridSTEAM.cpp  QuadPenalty.cpp  QuadPenalty.h  QuadPenalty.hpp  Robject.cpp  Robject.h  Robject.hpp  SENSE.cpp  SENSE.h  SENSE.hpp  SENSETest.cpp  TVPenalty.cpp  (+52 more)
PowerGrid/MPI/: CMakeLists.txt  PowerGridPcSenseMPI.cpp  PowerGridPcSenseMPI_TS.cpp  PowerGridSenseMPI.cpp  mpiPowerGridDWI3DDFT.cpp  mpiPowerGridSTEAM.cpp  mpipcSENSE.cpp  mpipcSENSE.h  mpipcSENSETimeSeg.cpp  mpipcSENSETimeSeg.h
PowerGrid/Microbenchmarks/pgCol/: CMakeLists.txt  main.cpp
PowerGrid/Tests/: CMakeLists.txt  pgColCplxTests.cpp  pgColTests.cpp  pgComplexTests.cpp  pgMatTests.cpp
PowerGrid/Tutorials/: simpleTutorial.cpp
PowerGrid/lowRank/: CMakeLists.txt  LRobj.cpp  LRobj.h  R_lowRank.cpp  R_lowRank.h  oscillateRecon.cpp
PowerGrid/reconSupport/: CMakeLists.txt  directRecon.cpp  directRecon.h  gridCoilImages.cpp
Support/: CeempleArmadillo.h  CeempleComplex.h  CeempleMatio.h
Support/ArmaExtensions/: Col_extra_bones.hpp  Col_extra_meat.hpp  Mat_extra_bones.hpp  Mat_extra_meat.hpp  arma_extensions.h  fn_circshift.hpp  op_circshift_bones.hpp  op_circshift_meat.hpp  permute.hpp
_data/: categories.yml
_docs/: Add_Content.md  Configuration.md  Creating_Objects.md  Creating_Reconstructions.md  Customize.md  Installation.md  Objects_in_PowerGrid.md  Solvers_in_PowerGrid.md  Structure.md
_includes/: document.html  footer.html  google-analytics.html  header-docs.html  header-index.html  header-project.html  header.html  sidebar.html
_posts/: 0-About.md  12-08-2015-Configuration.md
_projects/: install.md
_site/: index.html
_site/assets/css/layouts/: marketing-old-ie.css  marketing.css  side-menu.css
_site/docs/: Add_Content.html  Configuration.html  Customize.html  Installation.html  Structure.html  index.html
_site/docs/Add_Content/: index.html
_site/docs/Configuration/: index.html
_site/docs/Customize/: index.html
_site/docs/Installation/: index.html
_site/docs/Structure/: index.html
_site/install/: index.html
assets/css/layouts/: marketing-old-ie.css
cmake/Modules/: FindACML.cmake  FindArmadillo.cmake  FindFFTW.cmake  FindMATIO.cmake  FindXerces.cmake
docker/: develop-compose.yml  develop-mpi-compose.yml  prod-compose.yml  prod-mpi-compose.yml
docker/powergrid/: Dockerfile
docker/powergrid-bw/: Dockerfile  powergrid-bw.py
docker/powergrid-bw-dev/: Dockerfile
docker/powergrid-dev/: Dockerfile
docker/powergrid-ssh/: Dockerfile
projects/: docs.md  install.md
